test/bad/classes/method04.px

class Test def
    func f(x: Char = 0) def
        skip

Test().f()
